--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -13,7 +13,11 @@
             bottom: 0;
             -webkit-clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
             clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
-            background-color: #4d4d4d;
+            // background-color: #4d4d4d;
+            background-image: url("/picture/daniel-james-1251706-unsplash\ \(Photo\ by\ Daniel\ James\ on\ Unsplash\).jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
         }
     }   
 
@@ -30,7 +34,11 @@
             bottom: 0;
             -webkit-clip-path: polygon(80% 100%, 100% 100%, 100% -33%, 20% 100%);
             clip-path: polygon(80% 100%, 100% 100%, 100% -33%, 20% 100%);
-            background-color: #4d4d4d;
+            // background-color: #4d4d4d;
+            background-image: url("/picture/frank-mckenna-140054-unsplash.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
         }
 
         .about__container {
@@ -110,7 +118,11 @@
             bottom: 0;
             -webkit-clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
             clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
-            background-color: #4d4d4d;
+            // background-color: #4d4d4d;
+            background-image: url("/picture/ben-klea-1218706-unsplash.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
         }
 
         
