--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -31,10 +31,11 @@
       transition: all 0.5s;
 
         a {
-          display: block;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
           height: 100%;
-          position: relative;
-          top: 10px;
           text-decoration: none;
           font-size: 2.2rem;
           color: inherit;
