--- a/sass/main.css
+++ b/sass/main.css
@@ -534,8 +534,41 @@ footer {
   z-index: 2;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
-  -webkit-box-shadow: 0px 0px 5px #262626;
-          box-shadow: 0px 0px 5px #262626;
+}
+
+.navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: fixed;
+  top: 40%;
+}
+
+.navigation__icon {
+  font-size: 30px;
+  width: 70px;
+  text-align: center;
+  -webkit-transition: all .2s ease-out;
+  transition: all .2s ease-out;
+  color: #fff;
+  border: 2px solid #ea9554;
+  border-left: none;
+}
+
+.navigation__icon:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.navigation__icon:hover {
+  width: 90px;
+}
+
+.navigation .active {
+  width: 90px;
 }
 
 .navbar {
@@ -609,6 +642,7 @@ footer {
   border: 5px solid #ea9554;
   font-weight: 600;
   text-transform: uppercase;
+  background-color: #2b2727;
 }
 
 .welcome-text .surname {
@@ -621,6 +655,7 @@ footer {
   border: 5px solid #ea9554;
   margin-left: 40px;
   text-transform: uppercase;
+  background-color: #2b2727;
 }
 
 .welcome-text .web-dev-text {
