--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -54,7 +54,7 @@
                 img {
                     width: 40rem;
                     border-radius: 30px;
-                    margin-left: 90px;
+                    margin-left: 20%;
 
                     @include respond(tab-port) {
                         width: 220px;
