--- a/sass/main.css
+++ b/sass/main.css
@@ -265,7 +265,6 @@ body {
   line-height: 1.7;
   color: #fff;
   background-color: #404040;
-  overflow: hidden;
 }
 
 .heading-secondary {
@@ -895,12 +894,7 @@ main .parallax-window {
   left: 0;
   right: 0;
   bottom: 0;
-  -webkit-clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
-  clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
-  background-image: url("/picture/daniel-james-1251706-unsplash (Photo by Daniel James on Unsplash).jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-color: #4d4d4d;
 }
 
 .section__about {
@@ -915,12 +909,7 @@ main .parallax-window {
   left: 0;
   right: 0;
   bottom: 0;
-  -webkit-clip-path: polygon(80% 100%, 100% 100%, 100% -33%, 20% 100%);
-  clip-path: polygon(80% 100%, 100% 100%, 100% -33%, 20% 100%);
-  background-image: url("/picture/frank-mckenna-140054-unsplash.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-color: #4d4d4d;
 }
 
 .section__about .about__container {
@@ -1035,11 +1024,6 @@ main .parallax-window {
   left: 0;
   right: 0;
   bottom: 0;
-  -webkit-clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
-  clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
-  background-image: url("/picture/ben-klea-1218706-unsplash.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-color: #4d4d4d;
 }
 /*# sourceMappingURL=main.css.map */
