--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -11,13 +11,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            -webkit-clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
-            clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
-            // background-color: #4d4d4d;
-            background-image: url("/picture/daniel-james-1251706-unsplash\ \(Photo\ by\ Daniel\ James\ on\ Unsplash\).jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
+            background-color: #4d4d4d;
         }
     }   
 
@@ -32,13 +26,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            -webkit-clip-path: polygon(80% 100%, 100% 100%, 100% -33%, 20% 100%);
-            clip-path: polygon(80% 100%, 100% 100%, 100% -33%, 20% 100%);
-            // background-color: #4d4d4d;
-            background-image: url("/picture/frank-mckenna-140054-unsplash.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
+            background-color: #4d4d4d;
         }
 
         .about__container {
@@ -116,13 +104,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            -webkit-clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
-            clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
-            // background-color: #4d4d4d;
-            background-image: url("/picture/ben-klea-1218706-unsplash.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
+            background-color: #4d4d4d;
         }
 
         
