--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -29,5 +29,6 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color: #fff;
-    background-color: #404040;
+    background-color: #173761;
+    overflow-x: hidden;
 }
