--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -41,6 +41,7 @@
 
 .navbar {
   height: 100%;
+  background-color: #173761;
 
   &__list {
     display: flex;
@@ -71,7 +72,7 @@
         }
 
         &:hover {
-          background-color: $primary-color;
+          background-color: #537B9E;
         }
     }
 
@@ -84,7 +85,7 @@
 .welcome-text {
     position: absolute;
     top: 200px;
-    left: 120px;
+    left: 20px;
 
     .name {
       display: block;
@@ -93,10 +94,10 @@
       margin-bottom: 10px;
       text-align: center;
       letter-spacing: 30px;
-      border: 5px solid $primary-color;
+      border: 5px solid #ADB5BD;
       font-weight: 600;
       text-transform: uppercase;
-      background-color: #2b2727;
+      background-color: #173761;
     }
     .surname {
       display: block;
@@ -105,18 +106,18 @@
       text-align: center;
       font-weight: bold;
       letter-spacing: 25px;
-      border: 5px solid $primary-color;
+      border: 5px solid #ADB5BD;
       margin-left: 40px;
       text-transform: uppercase;
-      background-color: #2b2727;
+      background-color: #173761;
     }
 
         .web-dev-text {
           display: inline-block;
           position: relative;
           top: 0px;
-          left: 40px;
-          font-size: 30px;
+          left: 70px;
+          font-size: 20px;
           letter-spacing: 23px;
           font-family: 'Playfair Display', 'Roboto', serif;
           opacity: .8;
