--- a/sass/main.css
+++ b/sass/main.css
@@ -264,7 +264,8 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color: #fff;
-  background-color: #404040;
+  background-color: #173761;
+  overflow-x: hidden;
 }
 
 .heading-secondary {
@@ -280,31 +281,6 @@ body {
   text-align: center;
   font-size: 2rem;
   padding: 20px;
-}
-
-.page-number {
-  position: fixed;
-  bottom: 100px;
-  right: 100px;
-  font-size: 40px;
-}
-
-.page-number .span--1 {
-  position: relative;
-  top: -20px;
-  left: 15px;
-  font-size: 60px;
-}
-
-.page-number .span--2 {
-  color: #ea9554;
-}
-
-.page-number .span--3 {
-  position: relative;
-  top: 15px;
-  left: -8px;
-  font-size: 25px;
 }
 
 .u-center-text {
@@ -572,6 +548,7 @@ footer {
 
 .navbar {
   height: 100%;
+  background-color: #173761;
 }
 
 .navbar__list {
@@ -616,7 +593,7 @@ footer {
 }
 
 .navbar__list--items:hover {
-  background-color: #ea9554;
+  background-color: #537B9E;
 }
 
 @media (max-width: 600px) {
@@ -628,7 +605,7 @@ footer {
 .welcome-text {
   position: absolute;
   top: 200px;
-  left: 120px;
+  left: 20px;
 }
 
 .welcome-text .name {
@@ -638,10 +615,10 @@ footer {
   margin-bottom: 10px;
   text-align: center;
   letter-spacing: 30px;
-  border: 5px solid #ea9554;
+  border: 5px solid #ADB5BD;
   font-weight: 600;
   text-transform: uppercase;
-  background-color: #2b2727;
+  background-color: #173761;
 }
 
 .welcome-text .surname {
@@ -651,18 +628,18 @@ footer {
   text-align: center;
   font-weight: bold;
   letter-spacing: 25px;
-  border: 5px solid #ea9554;
+  border: 5px solid #ADB5BD;
   margin-left: 40px;
   text-transform: uppercase;
-  background-color: #2b2727;
+  background-color: #173761;
 }
 
 .welcome-text .web-dev-text {
   display: inline-block;
   position: relative;
   top: 0px;
-  left: 40px;
-  font-size: 30px;
+  left: 70px;
+  font-size: 20px;
   letter-spacing: 23px;
   font-family: 'Playfair Display', 'Roboto', serif;
   opacity: .8;
@@ -885,31 +862,38 @@ main .parallax-window {
 .section__start {
   position: relative;
   width: 100vw;
-  height: 100vh;
+  height: 60vh;
+  background-color: #3A6D94;
 }
 
-.section__start .clip-path {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #4d4d4d;
+.section__start .start--photo img {
+  width: 40rem;
+  border-radius: 30px;
+  margin-left: 20%;
+}
+
+@media (max-width: 900px) {
+  .section__start .start--photo img {
+    width: 220px;
+    height: 290px;
+    border-radius: 30px;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .section__start .start--photo img {
+    width: 150px;
+    height: 190px;
+    border-radius: 30px;
+    margin-left: 0;
+  }
 }
 
 .section__about {
   position: relative;
   width: 100vw;
   height: 100vh;
-}
-
-.section__about .clip-path {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #4d4d4d;
 }
 
 .section__about .about__container {
@@ -921,36 +905,6 @@ main .parallax-window {
           align-items: center;
   position: absolute;
   height: 100%;
-}
-
-.section__about .about__container .about--photo {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-}
-
-.section__about .about__container .about--photo img {
-  width: 40rem;
-  border-radius: 30px;
-  margin-left: 20%;
-}
-
-@media (max-width: 900px) {
-  .section__about .about__container .about--photo img {
-    width: 220px;
-    height: 290px;
-    border-radius: 30px;
-    margin-left: 0;
-  }
-}
-
-@media (max-width: 600px) {
-  .section__about .about__container .about--photo img {
-    width: 150px;
-    height: 190px;
-    border-radius: 30px;
-    margin-left: 0;
-  }
 }
 
 @media (max-width: 900px) {
@@ -1016,14 +970,5 @@ main .parallax-window {
   height: 100vh;
   width: 100vw;
   text-align: center;
-}
-
-.section__contact .clip-path {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #4d4d4d;
 }
 /*# sourceMappingURL=main.css.map */
