--- a/sass/main.css
+++ b/sass/main.css
@@ -602,49 +602,6 @@ footer {
   }
 }
 
-.welcome-text {
-  position: absolute;
-  top: 200px;
-  left: 20px;
-}
-
-.welcome-text .name {
-  display: block;
-  font-size: 5.5rem;
-  width: 400px;
-  margin-bottom: 10px;
-  text-align: center;
-  letter-spacing: 30px;
-  border: 5px solid #ADB5BD;
-  font-weight: 600;
-  text-transform: uppercase;
-  background-color: #173761;
-}
-
-.welcome-text .surname {
-  display: block;
-  font-size: 5.5rem;
-  width: 480px;
-  text-align: center;
-  font-weight: bold;
-  letter-spacing: 25px;
-  border: 5px solid #ADB5BD;
-  margin-left: 40px;
-  text-transform: uppercase;
-  background-color: #173761;
-}
-
-.welcome-text .web-dev-text {
-  display: inline-block;
-  position: relative;
-  top: 0px;
-  left: 70px;
-  font-size: 20px;
-  letter-spacing: 23px;
-  font-family: 'Playfair Display', 'Roboto', serif;
-  opacity: .8;
-}
-
 .a-burger {
   display: inline-block;
   position: relative;
@@ -860,34 +817,84 @@ main .parallax-window {
 }
 
 .section__start {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: relative;
   width: 100vw;
   height: 60vh;
   background-color: #3A6D94;
+  padding-top: 50px;
+}
+
+.section__start .welcome-text {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section__start .welcome-text .name {
+  display: block;
+  font-size: 5.5rem;
+  width: 400px;
+  margin-bottom: 10px;
+  text-align: center;
+  letter-spacing: 30px;
+  border: 5px solid #ADB5BD;
+  font-weight: 600;
+  text-transform: uppercase;
+  background-color: #173761;
+}
+
+.section__start .welcome-text .surname {
+  display: block;
+  font-size: 5.5rem;
+  width: 480px;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 25px;
+  border: 5px solid #ADB5BD;
+  text-transform: uppercase;
+  background-color: #173761;
+}
+
+.section__start .welcome-text .web-dev-text {
+  display: inline-block;
+  position: relative;
+  top: 0px;
+  font-size: 20px;
+  width: 100%;
+  text-align: center;
+  letter-spacing: 23px;
+  font-family: 'Playfair Display', 'Roboto', serif;
+  opacity: .8;
+}
+
+.section__start .start--photo {
+  border: 2px solid red;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .section__start .start--photo img {
   width: 40rem;
   border-radius: 30px;
   margin-left: 20%;
-}
-
-@media (max-width: 900px) {
-  .section__start .start--photo img {
-    width: 220px;
-    height: 290px;
-    border-radius: 30px;
-    margin-left: 0;
-  }
-}
-
-@media (max-width: 600px) {
-  .section__start .start--photo img {
-    width: 150px;
-    height: 190px;
-    border-radius: 30px;
-    margin-left: 0;
-  }
+  background-image: url("./../../picture/me_small.jpg");
 }
 
 .section__about {
