--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -8,7 +8,7 @@
         background-color: #3A6D94;
         padding-top: 50px;
 
-        .welcome-text {
+        &--text {
             flex: 1;
             display: flex;
             flex-direction: column;
@@ -23,6 +23,7 @@
               text-align: center;
               letter-spacing: 30px;
               border: 5px solid #ADB5BD;
+              border-radius: 3px;
               font-weight: 600;
               text-transform: uppercase;
               background-color: #173761;
@@ -35,6 +36,7 @@
               font-weight: bold;
               letter-spacing: 25px;
               border: 5px solid #ADB5BD;
+              border-radius: 3px;
               text-transform: uppercase;
               background-color: #173761;
             }
@@ -53,15 +55,14 @@
         }
         
 
-        .start--photo {
-            border: 2px solid red;
+        &--photo {
             flex: 1;
 
             img {
-                width: 40rem;
-                border-radius: 30px;
-                margin-left: 20%;
-                background-image: url("./../../picture/me_small.jpg");
+                margin: 30px;
+                height: 100%;
+                box-shadow: 0 0 0px 15px #173761;
+                border-radius: 3px;
 
                 // @include respond(tab-port) {
                 //     width: 220px;
