--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -80,7 +80,45 @@
             }
         }
 
-    }   
+    }  
+    
+        &__technology-learned {
+        background-color: #efefef;
+        height: auto;
+        width: 97%;
+        margin: auto;
+        border-radius: 5px;
+
+        .contener {
+
+            .technology-learned {
+                
+                &--box {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    justify-content: space-around;
+                    align-items: center;
+                    padding: 20px 0;
+                }
+
+                &--logo {
+                    height: 130px;
+
+                    &:nth-child(4) {
+                        height: 60px;
+                        width: 130px;;
+                    }
+
+                    &:nth-child(6) {
+                        height: 60px;
+                        width: 130px;;
+                    }
+                }
+            }
+        }
+    }
+
 
     &__about {
         position: relative;
@@ -132,44 +170,6 @@
         width: 100vw;
         text-align: center;        
     }
-
-
-    // &__technology-learned {
-    //     background-color: #efefef;
-    //     height: auto;
-    //     width: 97%;
-    //     margin: auto;
-    //     border-radius: 5px;
-
-    //     .contener {
-
-    //         .technology-learned {
-                
-    //             &--box {
-    //                 display: flex;
-    //                 flex-direction: row;
-    //                 flex-wrap: wrap;
-    //                 justify-content: space-around;
-    //                 align-items: center;
-    //                 padding: 20px 0;
-    //             }
-
-    //             &--logo {
-    //                 height: 130px;
-
-    //                 &:nth-child(4) {
-    //                     height: 60px;
-    //                     width: 130px;;
-    //                 }
-
-    //                 &:nth-child(6) {
-    //                     height: 60px;
-    //                     width: 130px;;
-    //                 }
-    //             }
-    //         }
-    //     }
-    // }
 
     // &__certyfikaty {
     //     height: 100vh;
