--- a/sass/main.css
+++ b/sass/main.css
@@ -900,44 +900,28 @@ main .parallax-window {
   border-radius: 3px;
 }
 
-.section__technology-learned {
-  background-color: #efefef;
-  height: auto;
-  width: 97%;
-  margin: auto;
-  border-radius: 5px;
+.section__technology {
+  position: relative;
+  top: 200px;
 }
 
-.section__technology-learned .contener .technology-learned--box {
+.section__technology--container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 20px 0;
+  width: 97%;
+  margin: auto;
 }
 
-.section__technology-learned .contener .technology-learned--logo {
-  height: 130px;
-}
-
-.section__technology-learned .contener .technology-learned--logo:nth-child(4) {
-  height: 60px;
-  width: 130px;
-}
-
-.section__technology-learned .contener .technology-learned--logo:nth-child(6) {
-  height: 60px;
-  width: 130px;
+.section__technology--container .icon-box {
+  width: 200px;
+  height: 300px;
+  border-radius: 5px;
+  border: 2px solid #ADB5BD;
 }
 
 .section__about {
