--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -82,39 +82,22 @@
 
     }  
     
-        &__technology-learned {
-        background-color: #efefef;
-        height: auto;
-        width: 97%;
-        margin: auto;
-        border-radius: 5px;
+    &__technology {
+        position: relative;
+        top: 200px;
 
-        .contener {
+        &--container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            width: 97%;
+            margin: auto;
 
-            .technology-learned {
-                
-                &--box {
-                    display: flex;
-                    flex-direction: row;
-                    flex-wrap: wrap;
-                    justify-content: space-around;
-                    align-items: center;
-                    padding: 20px 0;
-                }
-
-                &--logo {
-                    height: 130px;
-
-                    &:nth-child(4) {
-                        height: 60px;
-                        width: 130px;;
-                    }
-
-                    &:nth-child(6) {
-                        height: 60px;
-                        width: 130px;;
-                    }
-                }
+            .icon-box {
+                width: 200px;
+                height: 300px;
+                border-radius: 5px;
+                border: 2px solid #ADB5BD;
             }
         }
     }
