--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -97,7 +97,28 @@
                 width: 200px;
                 height: 300px;
                 border-radius: 5px;
-                border: 2px solid #ADB5BD;
+                border: 4px solid #3A6D94;
+                z-index: 1;
+
+                ion-icon {
+                    font-size: 20px;
+                    width: 60%;
+                    height: 60%;
+                    color: #ADB5BD;
+                    position: relative;
+                    left: 50%;
+                    top: 40%;
+                    transform: translate(-50%, -50%);
+                    transition: all .3s;
+                }
+            }
+
+            .icon-box:hover {
+                ion-icon {
+                    transform: translate(-50%, -80%);
+                    width: 50%;
+                    height: 50%;
+                }
             }
         }
     }
