--- a/sass/main.css
+++ b/sass/main.css
@@ -918,25 +918,41 @@ main .parallax-window {
 }
 
 .section__technology--container .icon-box {
+  position: relative;
   width: 200px;
   height: 300px;
   border-radius: 5px;
   border: 4px solid #3A6D94;
   z-index: 1;
+  overflow: hidden;
 }
 
 .section__technology--container .icon-box ion-icon {
+  position: absolute;
   font-size: 20px;
   width: 60%;
   height: 60%;
   color: #ADB5BD;
-  position: relative;
   left: 50%;
   top: 40%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  -webkit-transition: all .3s;
-  transition: all .3s;
+  -webkit-transition: all .4s;
+  transition: all .4s;
+}
+
+.section__technology--container .icon-details {
+  position: absolute;
+  bottom: -120px;
+  width: 100%;
+  height: 40%;
+  -webkit-transition: all .4s;
+  transition: all .4s;
+  font-size: 22px;
+  text-align: center;
+  padding-top: 20px;
+  background-color: #3A6D94;
+  border-radius: 15px 15px 0 0;
 }
 
 .section__technology--container .icon-box:hover ion-icon {
@@ -944,6 +960,10 @@ main .parallax-window {
           transform: translate(-50%, -80%);
   width: 50%;
   height: 50%;
+}
+
+.section__technology--container .icon-box:hover .icon-details {
+  bottom: 0;
 }
 
 .section__about {
