--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -16,29 +16,29 @@
             align-items: center;
 
             .name {
-              display: block;
-              font-size: 5.5rem;
-              width: 400px;
-              margin-bottom: 10px;
-              text-align: center;
-              letter-spacing: 30px;
-              border: 5px solid #ADB5BD;
-              border-radius: 3px;
-              font-weight: 600;
-              text-transform: uppercase;
-              background-color: #173761;
+                display: block;
+                font-size: 5.5rem;
+                width: 400px;
+                margin-bottom: 10px;
+                text-align: center;
+                letter-spacing: 30px;
+                border: 5px solid #ADB5BD;
+                border-radius: 3px;
+                font-weight: 600;
+                text-transform: uppercase;
+                background-color: #173761;
             }
             .surname {
-              display: block;
-              font-size: 5.5rem;
-              width: 480px;
-              text-align: center;
-              font-weight: bold;
-              letter-spacing: 25px;
-              border: 5px solid #ADB5BD;
-              border-radius: 3px;
-              text-transform: uppercase;
-              background-color: #173761;
+                display: block;
+                font-size: 5.5rem;
+                width: 480px;
+                text-align: center;
+                font-weight: bold;
+                letter-spacing: 25px;
+                border: 5px solid #ADB5BD;
+                border-radius: 3px;
+                text-transform: uppercase;
+                background-color: #173761;
             }
         
             .web-dev-text {
@@ -114,8 +114,21 @@
                     transition: all .4s;
                 }
 
+                &:hover {
+                    ion-icon {
+                        transform: translate(-50%, -80%);
+                        width: 50%;
+                        height: 50%;
+                    }
+    
+                    .icon-details {
+                        bottom: 0;
+                    }
+                }
+
             
             }
+
             .icon-details {
                 position: absolute;
                 bottom: -120px;
@@ -126,19 +139,6 @@
                 text-align: center;
                 padding-top: 20px;
                 background-color: #3A6D94; 
-                border-radius: 15px 15px 0 0;
-            }
-
-            .icon-box:hover {
-                ion-icon {
-                    transform: translate(-50%, -80%);
-                    width: 50%;
-                    height: 50%;
-                }
-
-                .icon-details {
-                    bottom: 0;
-                }
             }
         }
     }
