--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -85,6 +85,7 @@
     &__technology {
         position: relative;
         top: 200px;
+        min-height: 40vh;
 
         &--container {
             display: flex;
@@ -145,15 +146,13 @@
 
 
     &__about {
-        position: relative;
-        width: 100vw;
-        height: 100vh;
 
         .about__container {
             display: flex;
             align-items: center;              
-            position: absolute;
-            height: 100%;
+            position: relative;
+            min-height: 60vh;
+            top: 150px;
 
             @include respond(tab-port) {
                 flex: 0;
@@ -175,22 +174,13 @@
                     @include respond(phone) {
                         padding: 10px 30px 20px 30px;
                     }
-                }
-    
-            }
-            
-            @include respond(tab-port) {
-                flex-direction: column;
-            }
-            @include respond(phone) {
-                flex-direction: column;
-            }
+                }    
+            }            
         }
     }
 
     &__contact {
         position: relative;
-        height: 100vh;
         width: 100vw;
         text-align: center;        
     }
