--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -27,6 +27,16 @@
                 font-weight: 600;
                 text-transform: uppercase;
                 background-color: #173761;
+                padding-left: 10px;
+
+                @include respond (tab-land) {
+                    width: 350px;
+                    letter-spacing: 25px;
+                }
+                @include respond (tab-port) {
+                    width: 283px;
+                    letter-spacing: 20px;
+                }
             }
             .surname {
                 display: block;
@@ -39,6 +49,16 @@
                 border-radius: 3px;
                 text-transform: uppercase;
                 background-color: #173761;
+                padding-left: 10px;
+
+                @include respond (tab-land) {
+                    width: 420px;
+                    letter-spacing: 25px;
+                }
+                @include respond (tab-port) {
+                    width: 365px;
+                    letter-spacing: 20px;
+                }
             }
         
             .web-dev-text {
@@ -51,6 +71,14 @@
                 letter-spacing: 23px;
                 font-family: 'Playfair Display', 'Roboto', serif;
                 opacity: .8;
+                padding-left: 20px;
+
+                @include respond (tab-land) {
+                    letter-spacing: 22px;
+                }
+                @include respond (tab-port) {
+                    letter-spacing: 15px;
+                }
             }
         }
         
@@ -61,22 +89,18 @@
 
             img {
                 margin: 30px;
-                height: 100%;
+                height: 650px;
                 box-shadow: 0 0 0px 15px #173761;
                 border-radius: 3px;
 
-                // @include respond(tab-port) {
-                //     width: 220px;
-                //     height: 290px;
-                //     border-radius: 30px;
-                //     margin-left: 0;
-                // }
-                // @include respond(phone) {
-                //     width: 150px;
-                //     height: 190px;
-                //     border-radius: 30px;
-                //     margin-left: 0;
-                // }
+                @include respond (tab-land) {
+                    height: 465px;
+                    margin-top: 77px;
+                }
+                @include respond (tab-port) {
+                    height: 444px;
+                    margin-top: 90px;
+                }
             }
         }
 
