--- a/sass/main.css
+++ b/sass/main.css
@@ -815,7 +815,6 @@ main .parallax-window {
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  width: 100vw;
   height: 60vh;
   background-color: #3A6D94;
   padding-top: 50px;
@@ -1017,61 +1016,24 @@ main .parallax-window {
   background-color: #3A6D94;
 }
 
-.section__about .about__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.section__about--container {
   position: relative;
-  min-height: 60vh;
-  top: 150px;
+  top: 300px;
+  background-color: #3A6D94;
 }
 
-@media (max-width: 900px) {
-  .section__about .about__container {
-    -webkit-box-flex: 0;
-        -ms-flex: 0;
-            flex: 0;
-    padding: 20px 5px 5px 5px;
-  }
+.section__about--text {
+  padding: 20px;
+  width: 80%;
+  margin: auto;
 }
 
-@media (max-width: 600px) {
-  .section__about .about__container {
-    -webkit-box-flex: 0;
-        -ms-flex: 0;
-            flex: 0;
-    padding: 30px 10px 10px 10px;
-  }
-}
-
-.section__about .about__container .about--text {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-}
-
-.section__about .about__container .about--text p {
+.section__about--text p {
   font-size: 2.4rem;
-}
-
-@media (max-width: 900px) {
-  .section__about .about__container .about--text p {
-    padding: 10px 30px 20px 30px;
-  }
-}
-
-@media (max-width: 600px) {
-  .section__about .about__container .about--text p {
-    padding: 10px 30px 20px 30px;
-  }
 }
 
 .section__contact {
   position: relative;
-  width: 100vw;
   text-align: center;
 }
 /*# sourceMappingURL=main.css.map */
