Prepare section start for max-width 900px

--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -79,6 +79,9 @@
                     letter-spacing: 15px;
                 }
             }
+            @include respond(tab-port) {
+                margin-top: 50px;
+            }
         }
         
 
@@ -102,7 +105,9 @@
                 }
             }
         }
-
+        @include respond(tab-port) {
+            flex-direction: column;
+        }
     }  
     
     &__technology {
