--- a/sass/main.css
+++ b/sass/main.css
@@ -921,6 +921,12 @@ main .parallax-window {
   }
 }
 
+@media (max-width: 900px) {
+  .section__start--text {
+    margin-top: 50px;
+  }
+}
+
 .section__start--photo {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -947,6 +953,15 @@ main .parallax-window {
   .section__start--photo img {
     height: 444px;
     margin-top: 90px;
+  }
+}
+
+@media (max-width: 900px) {
+  .section__start {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
