--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -128,6 +128,7 @@
                 height: 300px;
                 border-radius: 5px;
                 border: 4px solid #3A6D94;
+                margin: 20px 10px;
                 z-index: 1;
                 overflow: hidden;
 
