--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -16,6 +16,9 @@
 */
 
 @mixin respond($breakpoint) {
+    @if $breakpoint == small-screen {
+        @media (max-width: 450px) { @content };
+    }
     @if $breakpoint == phone {
         @media (max-width: 600px) { @content };
     }
