--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -30,7 +30,7 @@
     // top: -5px;
 
     &:hover {
-        color: $primary-color;
+        // color: $primary-color;
         opacity: 1;
     }
 
@@ -76,18 +76,18 @@
     color: white;
     border: none;
     border-radius: 50%;
-    background: $primary-color;
+    // background: $primary-color;
     cursor: pointer;
-    box-shadow: 0 0 0 0 rgba($primary-color, .5);
+    // box-shadow: 0 0 0 0 rgba($primary-color, .5);
     -webkit-animation: pulse 1.5s infinite;
     animation: pulse 1.5s infinite;
 
     &:hover {
-      -webkit-animation: none;
-      animation: none;
+        -webkit-animation: none;
+        animation: none;
     }
-  }
+}
 
-  .arrow-button {
-      position: relative;
-  }
+    .arrow-button {
+        position: relative;
+    }
