--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -86,7 +86,7 @@
     }
     70% {
       transform: scale(1);
-      box-shadow: 0 0 0 50px rgba($primary-color, 0);
+      // box-shadow: 0 0 0 50px rgba($primary-color, 0);
     }
       100% {
       transform: scale(.9);
