--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -21,8 +21,8 @@
     width: 70px;
     text-align: center;
     transition: all .2s ease-out;
-    color: $primary-text-color;
-    border: 2px solid $primary-color;
+    // color: $primary-text-color;
+    // border: 2px solid $primary-color;
     border-left: none;
 
     &:not(:last-child) {
@@ -143,7 +143,7 @@
     }
     
     span {
-      background: $primary-color;
+      // background: $primary-color;
       border: none;
       height: 5px;
       width: 100%;
