Prepare for max-width 450px

--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -13,4 +13,8 @@
     text-align: center;
     font-size: 30px;
     padding: 20px;
+
+    @include respond(small-screen) {
+        font-size: 22px;
+    }
 }
