--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -28,7 +28,7 @@ body {
     font-family: 'Roboto', serif;
     font-weight: 400;
     line-height: 1.7;
-    color: #fff;
-    background-color: #173761;
+    color: #EEF4F2;
+    background-color: #233656;
     overflow-x: hidden;
 }
