--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -41,7 +41,7 @@
 
 .navbar {
   height: 100%;
-  background-color: #173761;
+  background-color: #233656;
 
   &__list {
     display: flex;
@@ -72,7 +72,7 @@
         }
 
         &:hover {
-          background-color: #537B9E;
+          background-color: #7B9BA6;
         }
     }
 
