--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -4,7 +4,7 @@
         display: flex;
         position: relative;
         height: 60vh;
-        background-color: #3A6D94;
+        background-color: #7B9BA6;
         padding-top: 50px;
 
         &--text {
@@ -21,11 +21,11 @@
                 margin-bottom: 10px;
                 text-align: center;
                 letter-spacing: 30px;
-                border: 5px solid #ADB5BD;
+                border: 5px solid #CDD6D5;
                 border-radius: 3px;
                 font-weight: 600;
                 text-transform: uppercase;
-                background-color: #173761;
+                background-color: #233656;
                 padding-left: 10px;
 
                 @include respond (tab-land) {
@@ -36,6 +36,10 @@
                     width: 283px;
                     letter-spacing: 20px;
                 }
+                @include respond (small-screen) {
+                    width: 250px;
+                    letter-spacing: 16px;
+                }
             }
             .surname {
                 display: block;
@@ -44,10 +48,10 @@
                 text-align: center;
                 font-weight: bold;
                 letter-spacing: 25px;
-                border: 5px solid #ADB5BD;
+                border: 5px solid #CDD6D5;
                 border-radius: 3px;
                 text-transform: uppercase;
-                background-color: #173761;
+                background-color: #233656;
                 padding-left: 10px;
 
                 @include respond (tab-land) {
@@ -57,6 +61,10 @@
                 @include respond (tab-port) {
                     width: 365px;
                     letter-spacing: 20px;
+                }
+                @include respond (small-screen) {
+                    width: 300px;
+                    letter-spacing: 16px;
                 }
             }
         
@@ -78,6 +86,9 @@
                 @include respond (tab-port) {
                     letter-spacing: 15px;
                 }
+                @include respond (small-screen) {
+                    font-size: 15px;
+                }
             }
             @include respond(tab-port) {
                 margin-top: 50px;
@@ -92,7 +103,7 @@
             img {
                 margin: 30px;
                 height: 650px;
-                box-shadow: 0 0 0px 15px #173761;
+                box-shadow: 0 0 0px 15px #233656;
                 border-radius: 3px;
 
                 @include respond (tab-land) {
@@ -135,7 +146,7 @@
                 width: 200px;
                 height: 300px;
                 border-radius: 5px;
-                border: 4px solid #3A6D94;
+                border: 4px solid #CDD6D5;
                 margin: 20px 10px;
                 z-index: 1;
                 overflow: hidden;
@@ -145,7 +156,7 @@
                     font-size: 20px;
                     width: 60%;
                     height: 60%;
-                    color: #ADB5BD;
+                    color: #CDD6D5;
                     left: 50%;
                     top: 40%;
                     transform: translate(-50%, -50%);
@@ -181,12 +192,11 @@
                 font-size: 22px;
                 text-align: center;
                 padding-top: 20px;
-                background-color: #3A6D94; 
+                background-color: #415B76; 
             }
         }
-
-        @include respond (small-screen) {
-            top: 100px;
+        @include respond(small-screen) {
+            top: 250px;
         }
     }
 
@@ -196,7 +206,7 @@
         &--container {
             position: relative;
             top: 300px;
-            background-color: #3A6D94;
+            background-color: #7B9BA6;
         }
 
         &--text {
@@ -209,10 +219,10 @@
         }  
     }
 
-    &__contact {
-        position: relative;
-        text-align: center;        
-    }
+    // &__contact {
+    //     position: relative;
+    //     text-align: center;        
+    // }
 
     // &__certyfikaty {
     //     height: 100vh;
