Change icon in icon-details and add technology

--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -193,6 +193,12 @@
                 text-align: center;
                 padding-top: 20px;
                 background-color: #415B76; 
+
+                span {
+                    display: flex;
+                    flex-direction: column;
+                    font-size: 16px;
+                }
             }
         }
         @include respond(small-screen) {
