--- a/sass/main.css
+++ b/sass/main.css
@@ -1067,6 +1067,17 @@ main .parallax-window {
   background-color: #415B76;
 }
 
+.section__technology--container .icon-details span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 16px;
+}
+
 @media (max-width: 450px) {
   .section__technology {
     top: 250px;
