--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -12,7 +12,17 @@
     font-family: 'Roboto', sans-serif;
     text-align: center;
     font-size: 30px;
-    padding: 20px;
+    padding: 30px;
+    margin-bottom: 30px;
+
+    span {
+        display: inline-block;
+        width: 400px;
+        border-radius: 5px;
+        padding: 10px;
+        color: #EEF4F2;
+        box-shadow: 0px 0px 10px #7B9BA6;
+    }
 
     @include respond(small-screen) {
         font-size: 22px;
