--- a/sass/main.css
+++ b/sass/main.css
@@ -275,7 +275,18 @@ body {
   font-family: 'Roboto', sans-serif;
   text-align: center;
   font-size: 30px;
-  padding: 20px;
+  padding: 30px;
+  margin-bottom: 30px;
+}
+
+.heading-small span {
+  display: inline-block;
+  width: 400px;
+  border-radius: 5px;
+  padding: 10px;
+  color: #EEF4F2;
+  -webkit-box-shadow: 0px 0px 10px #7B9BA6;
+          box-shadow: 0px 0px 10px #7B9BA6;
 }
 
 @media (max-width: 450px) {
@@ -995,7 +1006,7 @@ main .parallax-window {
 
 .section__technology {
   position: relative;
-  top: 200px;
+  top: 130px;
   min-height: 40vh;
 }
 
