Add display: none to header on small screen

--- a/sass/main.css
+++ b/sass/main.css
@@ -519,6 +519,12 @@ footer {
   transition: all 0.5s;
 }
 
+@media (max-width: 600px) {
+  .header {
+    display: none;
+  }
+}
+
 .navigation {
   display: -webkit-box;
   display: -ms-flexbox;
