--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,6 +7,10 @@
   z-index: 2;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+
+  @include respond(phone) {
+    display: none;
+  }
 }
 
 .navigation {
