--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -223,6 +223,9 @@
                     flex-direction: column;
                     font-size: 16px;
                 }
+                @include respond (small-screen) {
+                    bottom: 0;
+                }
             }
         }
     }
