--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -225,6 +225,7 @@
                 }
                 @include respond (small-screen) {
                     bottom: 0;
+                    padding-top: 10px;
                 }
             }
         }
