--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -33,15 +33,18 @@
                     width: 350px;
                     letter-spacing: 25px;
                 }
+
                 @include respond (tab-port) {
                     width: 283px;
                     letter-spacing: 20px;
                 }
+
                 @include respond (small-screen) {
                     width: 250px;
                     letter-spacing: 16px;
                 }
             }
+
             .surname {
                 display: block;
                 font-size: 5.5rem;
@@ -59,16 +62,18 @@
                     width: 420px;
                     letter-spacing: 25px;
                 }
+
                 @include respond (tab-port) {
                     width: 365px;
                     letter-spacing: 20px;
                 }
+
                 @include respond (small-screen) {
                     width: 300px;
                     letter-spacing: 16px;
                 }
             }
-        
+
             .web-dev-text {
                 display: inline-block;
                 position: relative;
@@ -84,18 +89,21 @@
                 @include respond (tab-land) {
                     letter-spacing: 22px;
                 }
+
                 @include respond (tab-port) {
                     letter-spacing: 15px;
                 }
+
                 @include respond (small-screen) {
                     font-size: 15px;
                 }
             }
+
             @include respond(tab-port) {
                 margin-top: 50px;
             }
         }
-        
+
 
         &--photo {
             flex: 1;
@@ -111,28 +119,33 @@
                     height: 465px;
                     margin-top: 77px;
                 }
+
                 @include respond (tab-port) {
                     height: 444px;
                     margin-top: 90px;
                 }
+
                 @include respond (phone) {
                     height: 380px;
                     margin-top: 90px;
                 }
+
                 @include respond (small-screen) {
                     height: 300px;
                     margin-top: 40px;
                 }
             }
         }
+
         @include respond(tab-port) {
             flex-direction: column;
             display: inline;
         }
+
         @include respond(phone) {
             padding-top: 0px;
         }
-    }  
+    }
 
     &__about {
 
@@ -149,12 +162,13 @@
             padding: 20px;
             width: 80%;
             margin: auto;
+
             p {
                 font-size: 2.4rem;
-            }    
-        }  
+            }
+        }
     }
-    
+
     &__technology {
         position: relative;
         top: 130px;
@@ -193,7 +207,7 @@
                     @include respond(tab-port) {
                         width: 40%;
                         height: 40%;
-                        transform: translate(-50%, -80%);   
+                        transform: translate(-50%, -80%);
                     }
                 }
 
@@ -202,7 +216,12 @@
                     font-size: 100px;
                     color: #CDD6D5;
                     top: 10%;
-                    transition: all .4s;   
+                    transition: all .4s;
+
+                    @include respond(tab-port) {
+                        font-size: 70px;
+                        transform: translate(0%, 10%);
+                    }
                 }
 
                 &:hover {
@@ -213,17 +232,17 @@
                     }
 
                     i {
-                        transform: translate(0%, -15%);
                         font-size: 70px;
                     }
-    
+
                     .icon-details {
                         bottom: 0;
                     }
-                }  
+                }
+
                 @include respond (small-screen) {
                     height: 250px;
-                }         
+                }
             }
 
             .icon-details {
@@ -235,13 +254,13 @@
                 font-size: 22px;
                 text-align: center;
                 padding-top: 20px;
-                background-color: #415B76; 
+                background-color: #415B76;
 
-                    span {
-                        display: flex;
-                        flex-direction: column;
-                        font-size: 16px;
-                    }
+                span {
+                    display: flex;
+                    flex-direction: column;
+                    font-size: 16px;
+                }
 
                 @include respond(tab-port) {
                     bottom: 0;
@@ -284,7 +303,7 @@
 
     //             &--box {
     //                 margin: 20px;   
-                    
+
     //                 .lightbox {
     //                     position: relative;
     //                     overflow: hidden;
@@ -309,14 +328,14 @@
     //                     //     animation: shine .75s;
     //                     // }                    
     //                 }
-                    
+
     //                 a.lightbox img {
     //                     height: 20rem;
     //                     width: 30rem;
     //                     border: 3px solid white;
     //                     box-shadow: 0px 0px 8px white;
     //                 }  
-                    
+
     //                 &:hover .loop-icon {
     //                     opacity: 1;
     //                     bottom: -8px;
@@ -345,7 +364,7 @@
     //                 transition: .3s ease-in-out;
     //                 opacity: 0;
     //             }
-                
+
     //             .lightbox-target {
     //                 position: fixed;
     //                 top: -100%;
@@ -436,7 +455,7 @@
     //                         }
     //                     }
     //                 }
-                                
+
     //             .lightbox-target:target a.lightbox-close {
     //                 top: 0px;
     //                 transition: all .5s ease-in-out;
@@ -457,7 +476,7 @@
 
     //         &-box {
     //             height: 100vh;
-                
+
     //             // @include respond(tab-land) {
     //             //     height: 91.3vh;
     //             // }
@@ -509,7 +528,7 @@
     //                     height: 100%;
     //                 }
     //             }
-                
+
     //             .popup {
     //                 width: 100%;
     //                 height: 100vh;
@@ -529,7 +548,7 @@
     //                     will-change: height, top;
     //                     animation: open-cv-animation .6s cubic-bezier(0.83, 0.04, 0, 1.16) .65s both;
     //                 }
-            
+
     //                 &:after {
     //                     content: "";
     //                     width: 0;
@@ -548,7 +567,7 @@
     //                     padding: 5% 15%;
     //                     box-sizing: border-box;
     //                     position: relative;
-                    
+
     //                     margin: auto;
     //                     overflow: auto;
     //                     animation: fade .5s ease-out 1.3s both;
@@ -557,7 +576,7 @@
     //                         font-size: 2rem;
     //                     }
     //                 }
-            
+
     //                 &-close {
     //                     width: 3.2rem;
     //                     height: 3.2rem;
