change font color and nav color

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -28,7 +28,7 @@ body {
     font-family: 'Roboto', serif;
     font-weight: 400;
     line-height: 1.7;
-    color: #EEF4F2;
+    color: #ccc;
     background-color: #000;
     overflow-x: hidden;
 }
