--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -25,8 +25,6 @@
     width: 70px;
     text-align: center;
     transition: all .2s ease-out;
-    // color: $primary-text-color;
-    // border: 2px solid $primary-color;
     border-left: none;
 
     &:not(:last-child) {
@@ -45,7 +43,6 @@
 
 .navbar {
   height: 100%;
-  background-color: #233656;
 
   &__list {
     display: flex;
@@ -62,7 +59,7 @@
       height: 100%;
       text-align: center;
       letter-spacing: 3px;
-      transition: all 0.5s;
+      transition: all .2s;
 
         a {
           display: flex;
@@ -76,7 +73,7 @@
         }
 
         &:hover {
-          background-color: #7B9BA6;
+          font-weight: 700;
         }
     }
 
