--- a/sass/main.css
+++ b/sass/main.css
@@ -259,7 +259,7 @@ body {
   font-family: 'Roboto', serif;
   font-weight: 400;
   line-height: 1.7;
-  color: #EEF4F2;
+  color: #ccc;
   background-color: #000;
   overflow-x: hidden;
 }
@@ -556,7 +556,6 @@ footer {
 
 .navbar {
   height: 100%;
-  background-color: #233656;
 }
 
 .navbar__list {
@@ -580,8 +579,8 @@ footer {
   height: 100%;
   text-align: center;
   letter-spacing: 3px;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: all .2s;
+  transition: all .2s;
 }
 
 .navbar__list--items a {
@@ -601,7 +600,7 @@ footer {
 }
 
 .navbar__list--items:hover {
-  background-color: #7B9BA6;
+  font-weight: 700;
 }
 
 @media (max-width: 600px) {
