--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,12 +13,15 @@ html {
     @include respond(tab-land) {
         font-size: 50%; // 8px
     }
+
     @include respond(tab-port) {
         font-size: 43.75%; // 7px
     }
+
     @include respond(phone) {
         font-size: 31.2%; // 5px
     }
+
     @include respond(big-desktop) {
         font-size: 65%; // 11px
     }
@@ -28,7 +31,7 @@ body {
     font-family: 'Roboto', serif;
     font-weight: 400;
     line-height: 1.7;
-    color: #ccc;
-    background-color: #000;
+    color: #EEF4F2;
+    background-color: #233656;
     overflow-x: hidden;
 }
