--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -20,7 +20,7 @@
   position: fixed;
   top: 40%;
 
-  &__icon { 
+  &__icon {
     font-size: 30px;
     width: 70px;
     text-align: center;
@@ -49,7 +49,7 @@
     height: 100%;
     align-items: center;
     justify-content: center;
-  
+
 
     &--items {
       list-style: none;
@@ -61,20 +61,21 @@
       letter-spacing: 3px;
       transition: all .2s;
 
-        a {
-          display: flex;
-          align-items: center;
-          justify-content: center;
+      a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-          height: 100%;
-          text-decoration: none;
-          font-size: 2.2rem;
-          color: inherit;
-        }
+        height: 100%;
+        text-decoration: none;
+        font-size: 2.2rem;
+        color: inherit;
+      }
 
-        &:hover {
-          font-weight: 700;
-        }
+      &:hover {
+        font-weight: 700;
+        background-color: #7b9ba6;
+      }
     }
 
     @include respond(phone) {
@@ -84,176 +85,182 @@
 }
 
 .a-burger {
-    display: inline-block;
-    position: relative;
-    text-align: center;
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-    overflow: hidden;
-    top: 5px;
-    
-    &:after {
-      content: '';
-      position: absolute;
-      background: white;
-      height: 2px;
-      width: 0%;
-      transform: translateX(-50%);
-      left: 50%;
-      bottom: 0;
-      transition: .35s ease;
-    }
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  overflow: hidden;
+  top: 5px;
 
-    &:hover:after,
-    &:focus:after,
-    &:active:after {
-      width: 100%;
-    }
-  }
-
-  .button_container {
-    display: none;
-    position: fixed;
-    top: 2%;
-    right: 2%;
-    height: 40px;
-    width: 40px;
-    cursor: pointer;
-    z-index: 100;
-    transition: opacity .25s ease;
-    
-    &:hover {
-      opacity: .7;
-    }
-    
-    &.active {
-      .top {
-        transform: translateY(11px) translateX(0) rotate(45deg);
-        background: black;
-      }
-      .middle {
-        opacity: 0;
-        background: black;
-      }
-      
-      .bottom {
-        transform: translateY(-11px) translateX(0) rotate(-45deg);
-        background: black;
-      }
-    }
-    
-    span {
-      // background: $primary-color;
-      border: none;
-      height: 5px;
-      width: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      transition:  all .35s ease;
-      cursor: pointer;
-    
-      &:nth-of-type(2) {
-        top: 11px;
-      }
-      
-      &:nth-of-type(3) {
-        top: 22px;
-      }
-    }
-    // TODO: Tymczasowo wyłączony burger
-    // @include respond (phone) {
-    //   display: block;
-    // }
-  }
-
-.overlay {
-    position: fixed;
+  &:after {
+    content: '';
+    position: absolute;
     background: white;
+    height: 2px;
+    width: 0%;
+    transform: translateX(-50%);
+    left: 50%;
+    bottom: 0;
+    transition: .35s ease;
+  }
+
+  &:hover:after,
+  &:focus:after,
+  &:active:after {
+    width: 100%;
+  }
+}
+
+.button_container {
+  display: none;
+  position: fixed;
+  top: 2%;
+  right: 2%;
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+  z-index: 100;
+  transition: opacity .25s ease;
+
+  &:hover {
+    opacity: .7;
+  }
+
+  &.active {
+    .top {
+      transform: translateY(11px) translateX(0) rotate(45deg);
+      background: black;
+    }
+
+    .middle {
+      opacity: 0;
+      background: black;
+    }
+
+    .bottom {
+      transform: translateY(-11px) translateX(0) rotate(-45deg);
+      background: black;
+    }
+  }
+
+  span {
+    // background: $primary-color;
+    border: none;
+    height: 5px;
+    width: 100%;
+    position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 0%;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity .35s, visibility .35s, height .35s;
-    overflow: hidden;
-    
-    &.open {
-      opacity: .9;
-      visibility: visible;
-      height: 100%;
-      
-      li {
-        animation: fadeInRight .5s ease forwards;
-        animation-delay: .3s;
-        
-        &:nth-of-type(2) {
-          animation-delay: .5s;
-        }
-        &:nth-of-type(3) {
-          animation-delay: .7s;
-        }
-        &:nth-of-type(4) {
-          animation-delay: .9s;
-        }
-        &:nth-of-type(5) {
-          animation-delay: 1.1s;
-        }
+    transition: all .35s ease;
+    cursor: pointer;
+
+    &:nth-of-type(2) {
+      top: 11px;
+    }
+
+    &:nth-of-type(3) {
+      top: 22px;
+    }
+  }
+
+  // TODO: Tymczasowo wyłączony burger
+  // @include respond (phone) {
+  //   display: block;
+  // }
+}
+
+.overlay {
+  position: fixed;
+  background: white;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .35s, visibility .35s, height .35s;
+  overflow: hidden;
+
+  &.open {
+    opacity: .9;
+    visibility: visible;
+    height: 100%;
+
+    li {
+      animation: fadeInRight .5s ease forwards;
+      animation-delay: .3s;
+
+      &:nth-of-type(2) {
+        animation-delay: .5s;
       }
-    }
-    nav {
-      position: relative;
-      height: 70%;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 50px;
-      font-weight: 400;
-      text-align: center;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0 auto;
-      display: inline-block;
-      position: relative;
-      height: 100%; 
-      
-      li {
-        display: block;
-        height: 25%;
-        height: calc(100% / 4);
-        min-height: 50px;
-        position: relative;
-        opacity: 0;
-        
-        a {
-          display: block;
-          position: relative;
-          color: black;
-          text-decoration: none;
-          overflow: hidden;
-          
-          &:hover:after,
-          &:focus:after,
-          &:active:after {
-              width: 100%;
-          }
-          
-          &:after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            width: 0%;
-            transform: translateX(-50%);
-            height: 3px;
-            background: black;
-            transition: .35s;
-          }
-        }
+
+      &:nth-of-type(3) {
+        animation-delay: .7s;
+      }
+
+      &:nth-of-type(4) {
+        animation-delay: .9s;
+      }
+
+      &:nth-of-type(5) {
+        animation-delay: 1.1s;
       }
     }
   }
 
+  nav {
+    position: relative;
+    height: 70%;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 50px;
+    font-weight: 400;
+    text-align: center;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
+    display: inline-block;
+    position: relative;
+    height: 100%;
+
+    li {
+      display: block;
+      height: 25%;
+      height: calc(100% / 4);
+      min-height: 50px;
+      position: relative;
+      opacity: 0;
+
+      a {
+        display: block;
+        position: relative;
+        color: black;
+        text-decoration: none;
+        overflow: hidden;
+
+        &:hover:after,
+        &:focus:after,
+        &:active:after {
+          width: 100%;
+        }
+
+        &:after {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          width: 0%;
+          transform: translateX(-50%);
+          height: 3px;
+          background: black;
+          transition: .35s;
+        }
+      }
+    }
+  }
+}
