--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -4,6 +4,7 @@
     position: relative;
     height: 60vh;
     padding-top: 50px;
+    background: linear-gradient(to bottom, #7b9ba6 65%, #233656);
 
     &--text {
       flex: 1;
@@ -11,7 +12,8 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-        // test
+
+      // test
       .name {
         display: block;
         font-size: 5.5rem;
@@ -175,6 +177,7 @@
       justify-content: space-around;
       width: 100%;
       margin: auto;
+      background: linear-gradient(to bottom, #233656, #7b9ba6 65%);
 
       .icon-box {
         position: relative;
